test/fail/bin_punc05.v3
//@parse = ParseError
class bin_punc01 {
	var c: int = 0b001.10;
}
